--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
+        "globe.gl": "^2.31.1",
+        "papaparse": "^5.4.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "globe.gl": "^2.31.1",
-        "papaparse": "^5.4.1"
+        "topojson-client": "^3.1.0"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.2.1",
