--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.2.1",
+        "netlify-cli": "^24.0.0",
         "vite": "^5.0.0"
     },
     "scripts": {
